<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:visibility="invisible"
	android:id="@+id/mainLayout"
	android:gravity="center"
	tools:context=".people.AddMedForPeople">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="2dp"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:text="@string/agree"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<Switch
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:id="@+id/switcher"
			android:textOff="@string/off"
			android:textOn="@string/on"
			android:showText="true"/>
	</LinearLayout>

	<Spinner
		android:layout_marginTop="10dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/spinner"/>

	<Button
		android:id="@+id/save_button"
		android:layout_width="220dp"
		android:layout_gravity="center"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/save" />

</LinearLayout>