<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mainLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:visibility="invisible"
	tools:context=".people.PeopleScreen">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="2dp"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/change_button"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="2dp"
			android:text="@string/change" />

		<Button
			android:id="@+id/delete_button"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/delete" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="10dp"
			android:text="@string/people_screen_name"
			android:textAlignment="textEnd"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:textAlignment="textStart"
			android:textColor="@color/colorWhite"
			android:textSize="14sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="10dp"
			android:text="@string/people_screen_surname"
			android:textAlignment="textEnd"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/surname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:textAlignment="textStart"
			android:textColor="@color/colorWhite"
			android:textSize="14sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="10dp"
			android:text="@string/people_screen_father_name"
			android:textAlignment="textEnd"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/father_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:text="@string/empty"
			android:textAlignment="textStart"
			android:textColor="@color/colorWhite"
			android:textSize="14sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="10dp"
			android:text="@string/people_screen_gender"
			android:textAlignment="textEnd"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/gender"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:textAlignment="textStart"
			android:textColor="@color/colorWhite"
			android:textSize="14sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="10dp"
			android:text="@string/people_screen_birthday"
			android:textAlignment="textEnd"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/birthday"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:textAlignment="textStart"
			android:textColor="@color/colorWhite"
			android:textSize="14sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="10dp"
			android:text="@string/people_screen_snils"
			android:textAlignment="textEnd"
			android:textColor="@color/colorWhite"
			android:textSize="14sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/snils"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			android:textAlignment="textStart"
			android:textColor="@color/colorWhite"
			android:textSize="14sp" />
	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="2dp"
		android:text="@string/people_screen_list"
		android:textColor="@color/colorWhite"
		android:textSize="16sp"
		android:textStyle="bold" />

	<Button
		android:id="@+id/add"
		android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/add_med" />

	<LinearLayout
		android:id="@+id/list_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		android:visibility="invisible">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<Button
				android:id="@+id/prev"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="5dp"
				android:text="@string/prev"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/size"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/colorWhite"
				android:textSize="14sp" />

			<Button
				android:id="@+id/next"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:text="@string/next"
				android:textSize="12sp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:layout_marginEnd="10dp"
				android:text="@string/name"
				android:textAlignment="textEnd"
				android:textColor="@color/colorWhite"
				android:textSize="14sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/vac_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:textAlignment="textStart"
				android:textColor="@color/colorWhite"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:layout_marginEnd="10dp"
				android:text="@string/date"
				android:textAlignment="textEnd"
				android:textColor="@color/colorWhite"
				android:textSize="14sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/date"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:textAlignment="textStart"
				android:textColor="@color/colorWhite"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:layout_marginEnd="10dp"
				android:text="@string/agree"
				android:textAlignment="textEnd"
				android:textColor="@color/colorWhite"
				android:textSize="14sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/agree"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:textAlignment="textStart"
				android:textColor="@color/colorWhite"
				android:textSize="14sp" />
		</LinearLayout>

	</LinearLayout>

</LinearLayout>