<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".meds.MedAdd">

	<EditText
		android:id="@+id/name"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:hint="@string/enter_name"
		android:inputType="text"
		android:maxLength="40" />

	<EditText
		android:id="@+id/amount"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:hint="@string/enter_amount"
		android:inputType="number"
		android:maxLength="8" />


	<Button
		android:id="@+id/save_button"
		android:layout_width="120dp"
		android:layout_gravity="center"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/save" />

</LinearLayout>