<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".meds.MedScreen">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/name"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:textColor="@color/colorWhite"
		android:textSize="16sp"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/nameTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:textColor="@color/colorWhite"
		android:textSize="14sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:text="@string/amount"
		android:textColor="@color/colorWhite"
		android:textSize="16sp"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/amountTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:textColor="@color/colorWhite"
		android:textSize="14sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/change_button"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:text="@string/change" />

		<Button
			android:id="@+id/delete_button"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:text="@string/delete" />
	</LinearLayout>

</LinearLayout>